--- a/homepage/style.css
+++ b/homepage/style.css
@@ -16,37 +16,194 @@
 
 body {
     background-color: #222121;
+    display: grid;
+    grid-template: minmax(40px, 80px) 90% minmax(40px, 80px) / 1fr 10fr 1fr;
+    grid-template-areas: 
+        "header header header"
+         ". main ."                     "footer footer footer";
+    height: 1300px;
 }
 
 header {
-    position: fixed;
+    grid-area: header;
+    background-color: #383737;
     border-bottom: 1px solid #7a7a7a;
-    width: 100%;
-    z-index: 10;
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
+    border-radius: 5px;
 }
 
-nav {
-    height: auto;
+.logo {
+    width: 30%;
+    height: 100%;
+    background-image: url('./images/big-logo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
-li {
-    display: inline;
+.logo a {
+    max-width: 100%;
+    max-height: 100%;
+    align-self: center;
 }
 
 main {
-    margin: auto;
+    background-color: beige;
+    grid-area: main;
 }
+
+#carousel {
+    background-color: darkblue;
+    height: 600px;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+
+#image-wheel {
+    background-color: darkolivegreen;
+    width: 100%;
+    height: 90%;
+    padding: 1%;
+    display: grid;
+    grid-template: 5% repeat(12, 1fr) 5% / repeat(10, 1fr);
+}
+
+
+
+#current-image {
+    grid-area: 2 / 4 / 11 / 8;
+    max-width: 100%;
+    border-radius: 10%;
+}
+
+#previous-image {
+    grid-area: 3 / 3 / 13 / 6;
+    height: 100%;
+    border-radius: 10%;
+}
+
+#after-image {
+    grid-area: 3 / 3 / 13 / 6;
+    height: 100%;
+    border-radius: 10%;
+}
+
+#carousel-buttons {
+    margin: 1%;
+    background-color: rgb(247, 144, 112);
+    min-width: 125px;
+    max-width: 150px;
+    text-align: center;
+}
+
+#carousel button {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    margin: 1%;
+    background-color: hsla(0, 0%, 48%, .2);
+    border: 1px solid hsla(0, 0%, 48%, .8);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+#carousel button:hover {
+    background-color: hsla(0, 0%, 48%, .5);
+    border: 1px solid hsla(0, 0%, 48%, 1);
+}
+
+/* Grid Section: Features */
+
+#grid {
+    display: grid;
+    width: 100%;
+    height: 50%;
+    padding: 2%;
+    grid-template: repeat(4, 1fr) / 1fr repeat(3, 3fr) 1fr;
+    grid-template-areas:
+        ". title title title ."
+        ". L-feature1 M-feature1 R-feature1 ."
+        ". L-feature2 M-feature2 R-feature2 ."
+        ". L-feature3 M-feature3 R-feature3 .";
+    gap: 1rem;
+}
+
+#grid .title {
+    grid-area: title;
+    text-align: center;
+}
+
+.title h1 {
+    font-size: 2em;
+}
+
+/* Left column */
+
+.L-one {
+    grid-area: L-feature1;
+}
+
+.L-two{
+    grid-area: L-feature2;
+}
+
+.L-three {
+    grid-area: L-feature3;
+}
+
+/* Middle column */
+
+.M-one {
+    grid-area: M-feature1;
+}
+
+.M-two {
+    grid-area: M-feature2;
+}
+
+.M-three {
+    grid-area: M-feature3;
+}
+
+/* Middle column */
+
+.R-one {
+    grid-area: R-feature1;
+}
+
+.R-two {
+    grid-area: R-feature2;
+}
+
+.R-three {
+    grid-area: R-feature3;
+}
+
+.feature {
+    background-color: #383737;
+    border-radius: 10px;
+    max-width: 200px;
+    height: 100px;
+}
+
 
 img {
     /* background shadow*/
-    border-radius: 25%;
+    border-radius: 10px;
 }
 
 img:hover {
     position: relative;
-    bottom: 1%;
-    right: 1%;
+    bottom: .125rem;
+    right: .125rem;
+}
+
+footer {
+    background-color: #383737;
+    grid-area: footer;
+    border-radius: 5px;
 }
